--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,9 @@
 @import "base";
 @import "typography";
 
+@import "heading";
+@import "button";
+
 @import "sidebar";
 @import "header";
 @import "realtors";
@@ -10,3 +13,5 @@
 @import "homes";
 @import "gallery";
 @import "footer";
+
+@import "utilities";
