--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -6,6 +6,13 @@
 
     display: flex;
     justify-content: center;
+
+    @include respond(large) {
+        grid-row: 1 / 2;
+        grid-column: 1 / -1;
+        justify-content: flex-end;
+        align-items: center;
+    }
 }
 
 %btn-icon {
@@ -34,5 +41,17 @@
     }
     &::after {
         transform: translateY(1.3rem);
+    }
+
+    @include respond(large) {
+        margin-top: 0;
+        margin-right: 3rem;
+
+        &::before {
+            transform: translateY(-1.2rem);
+        }
+        &::after {
+            transform: translateY(1rem);
+        }
     }
 }
