--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,8 +7,12 @@
 }
 
 html {
-    font-size: 62.5%; // 1px = 10px | 10/16 = .625
     box-sizing: border-box;
+    font-size: 62.5%; // 1px = 10px | 10/16 = .625
+
+    @include respond(largest) {
+        font-size: 50%; // 1px = 8px | 8/16 = .5
+    }
 }
 
 body {
@@ -27,5 +31,18 @@ body {
             [col-start] minmax(min-content, 14rem) [col-end]
         )
         [center-end] minmax(6rem, 1fr) [full-end];
-    // grid-auto-rows: min-content;
+
+    @include respond(large) {
+        grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+        grid-template-columns:
+            [full-start] minmax(6rem, 1fr) [center-start] repeat(
+                8,
+                [col-start] minmax(min-content, 14rem) [col-end]
+            )
+            [center-end] minmax(6rem, 1fr) [full-end];
+    }
+
+    @include respond(medium) {
+        grid-template-rows: 6rem calc(100vh - 6rem);
+    }
 }
