--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -9,11 +9,27 @@
     justify-items: center;
     grid-gap: 2rem 0;
 
+    @include respond(medium) {
+        grid-column: full-start / full-end;
+    }
+
+    @include respond(small) {
+        padding: 5rem;
+    }
+
     &__list {
         display: grid;
         grid-template-columns: min-content max-content;
         grid-gap: 5vh 2rem;
         align-items: center;
+
+        @include respond(medium) {
+            grid-template-columns: repeat(3, min-content max-content);
+        }
+
+        @include respond(small) {
+            grid-template-columns: min-content max-content;
+        }
     }
 
     &__img {
