--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -15,3 +15,33 @@ $color-grey-dark-2: #6d5d4b;
 // FONT VARIABLES
 $font-primary: "Nunito", sans-serif;
 $font-display: "Josefin Sans", sans-serif;
+
+// Media Queries
+$bp-largest: 75em; // 1200/16 = 75
+$bp-large: 62.5em; // 1000/16 = 62.5
+$bp-medium: 50em; // 800/16 = 50
+$bp-small: 37.5em; // 600/16 = 37.5
+
+@mixin respond($breakpoint) {
+    @if ($breakpoint == largest) {
+        @media only screen and (max-width: $bp-largest) {
+            @content;
+            $bp-medium: 50em;
+        }
+    }
+    @if ($breakpoint == large) {
+        @media only screen and (max-width: $bp-large) {
+            @content;
+        }
+    }
+    @if ($breakpoint == medium) {
+        @media only screen and (max-width: $bp-medium) {
+            @content;
+        }
+    }
+    @if ($breakpoint == small) {
+        @media only screen and (max-width: $bp-small) {
+            @content;
+        }
+    }
+}
